--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h2>our products</h2>
         </div>
         <div class="products-center">
-            <!-- single product -->
+            <!-- single product 
             <article class="product">
                 <div class="img-container">
                     <img src="./images/product-1.jpeg" alt="Product 1" class="product-img">
@@ -55,25 +55,45 @@
                 <h3>queen bed</h3>
                 <h4>$16</h4>
             </article>
-            <!-- end of single product -->
-            <!-- single product -->
-            <article class="product">
-                <div class="img-container">
-                    <img src="./images/product-1.jpeg" alt="Product 1" class="product-img">
-                    <button class="bag-btn" data-id="1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to bag
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$16</h4>
-            </article>
-            <!-- end of single product -->
+            end of single product -->
         </div>
     </section>
-
     <!-- end ofproducts -->
+    <!-- cart -->
+    <div class="cart-overlay">
+        <div class="cart">
+            <span class="close-cart">
+                <i class="fa fa-window-close"></i>
+            </span>
+            <h2>Your Cart</h2>
+            <div class="cart-content">
+                <!-- cart item -->
+                <!-- <div class="cart-item">
+                    <img src="./images/product-1.jpeg" alt="product">
+                    <div>
+                        <h4>queen bed</h4>
+                        <h5>$9.00</h5>
+                        <span class="remove-item">remove</span>
+                    </div>
+                    <div>
+                        <i class="fas fa-chevron-up"></i>
+                        <p class="item-amount">1</p>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                </div> -->
+                <!-- end of cart item -->
+            </div>
 
+            <!-- cart footer -->
+            <div class="cart-footer">
+                <h3>your total: $ <span class="cart-total">0</span></h3>
+                <button class="clear-cart banner-btn">clear cart</button>
+            </div>
+            <!--end of cart footer -->
+        </div>
+
+    </div>
+    <!-- end of cart -->
 </body>
 
 </html>
