--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <img src="./images/product-1.jpeg" alt="Product 1" class="product-img">
                     <button class="bag-btn" data-id="1">
                         <i class="fas fa-shopping-cart"></i>
-                        add to bag
+                        add to cart
                     </button>
                 </div>
                 <h3>queen bed</h3>
